fix bios alerts

--- a/system/infra-monitoring/templates/alerts.yaml
+++ b/system/infra-monitoring/templates/alerts.yaml
@@ -1,5 +1,5 @@
 {{- $values := .Values.prometheus_server }}
-{{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
+{{- range $path, $bytes := .Files.Glob "vendor/*/alerts/*.alerts" }}
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
