--- a/openstack/hermes/templates/api-service.yaml
+++ b/openstack/hermes/templates/api-service.yaml
@@ -8,7 +8,7 @@ metadata:
     system: openstack
     component: hermes
   annotations:
-    prometheus.io/targets: "openstack"
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus }}
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
 spec:
