make fix limit configurable via secret

--- a/openstack/cinder/templates/nanny-deployment.yaml
+++ b/openstack/cinder/templates/nanny-deployment.yaml
@@ -52,6 +52,8 @@ spec:
               value: {{ .Values.consistency.enabled | quote }}
             - name: CINDER_CONSISTENCY_DRY_RUN
               value: {{ .Values.consistency.dry_run | quote }}
+            - name: CINDER_CONSISTENCY_FIX_LIMIT
+              value: {{ .Values.consistency.fix_limit | quote }}
             - name: CINDER_NANNY_INTERVAL
               value: {{ .Values.nanny.interval | quote }}
             - name: OS_AUTH_URL
