--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -228,6 +228,8 @@ consistency:
   enabled: False
   # dry run mode, i.e. just check for consistency without fixing it
   dry_run: True
+  # how many inconsistencies to fix at max - otherwise fixing will be denied
+  fix_limit: 25
 db_cleanup:
   enabled: False
   # dry run mode, i.e. just pretend to cleanup the entries
