--- a/openstack/nova/templates/nanny-deployment.yaml
+++ b/openstack/nova/templates/nanny-deployment.yaml
@@ -60,6 +60,8 @@ spec:
               value: {{ .Values.consistency.older_than | quote }}
             - name: NOVA_CONSISTENCY_MAX_INSTANCE_FAULTS
               value: {{ .Values.consistency.max_instance_faults | quote }}
+            - name: NOVA_CONSISTENCY_FIX_LIMIT
+              value: {{ .Values.consistency.fix_limit | quote }}
             - name: NOVA_QUEENS_INSTANCE_MAPPING_ENABLED
               value: {{ .Values.consistency.queens_instance_mapping_enabled | quote }}
             - name: NOVA_QUEENS_INSTANCE_MAPPING_DRY_RUN
