--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -649,6 +649,8 @@ consistency:
   older_than: 21
   # keep at max n instance fault entries per instance
   max_instance_faults: 10
+  # how many inconsistencies to fix at max - otherwise fixing will be denied
+  fix_limit: 25
 db_cleanup:
   enabled: False
   # dry run mode, i.e. just pretend to cleanup the entries
