[dex] made deployment optional

--- a/system/kube-system/charts/dex/templates/ingress.yaml
+++ b/system/kube-system/charts/dex/templates/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.enabled -}}
+{{- if and .Values.enabled .Values.ingress.enabled -}}
 {{- $fullName := include "dex.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
 apiVersion: extensions/v1beta1
