--- a/system/kube-system/charts/dex/templates/secret.yaml
+++ b/system/kube-system/charts/dex/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 {{- if or (.Values.ingress.ca) (ne (len .Values.extraCAs) 0) }}
 kind: Secret
 apiVersion: v1
@@ -48,3 +49,4 @@ metadata:
   name: {{ template "dex.fullname" . }}-config
 data:
   config.yaml: {{ toYaml .Values.config | b64enc }}
+{{- end }}
