--- a/system/kube-system/charts/dex/templates/deployment.yaml
+++ b/system/kube-system/charts/dex/templates/deployment.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.enabled }}
+
 {{ $fullname := include "dex.fullname" . }}
 
 apiVersion: extensions/v1beta1
@@ -82,4 +84,5 @@ spec:
 {{- end }}
 {{- if ne (len .Values.extraVolumes) 0 }}
 {{ toYaml .Values.extraVolumes | indent 6 }}
+{{- end }}
 {{- end }}
