--- a/system/kube-system/charts/dex/templates/service.yaml
+++ b/system/kube-system/charts/dex/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -30,3 +31,4 @@ spec:
   selector:
     app: {{ template "dex.name" . }}
     release: {{ .Release.Name | quote }}
+{{- end }}
