--- a/system/kube-system/charts/dex/values.yaml
+++ b/system/kube-system/charts/dex/values.yaml
@@ -3,6 +3,9 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 
+# Enable dex.
+enabled: false
+
 image: hub.global.cloud.sap/monsoon/dex
 imageTag: "latest"
 imagePullPolicy: "IfNotPresent"
