--- a/openstack/grafanasix/templates/nginx-ingress.yaml
+++ b/openstack/grafanasix/templates/nginx-ingress.yaml
@@ -20,3 +20,28 @@ spec:
             serviceName: grafana
             servicePort: {{.Values.nginx.endpoint.port.public}}
 {{- end }}
+{{- if .Values.nginx.global }}
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+
+metadata:
+  name: grafana-kiosk-global
+  annotations:
+    vice-president: {{ default false .Values.grafana.vice_president | quote }}
+    disco: {{ default false .Values.grafana.disco | quote }}
+    disco/zone-name: "global.cloud.sap"
+spec:
+  tls:
+    - secretName: tls-grafana-kiosk
+      hosts: ["{{.Values.nginx.endpoint.host.global}}"]
+  rules:
+    - host: "{{.Values.nginx.endpoint.host.global}}"
+      http:
+        paths:
+        - path: /
+          backend:
+            serviceName: grafana
+            servicePort: {{.Values.nginx.endpoint.port.public}}
+{{- end }}
+{{- end }}
