--- a/openstack/grafanasix/templates/nginx-ingress.yaml
+++ b/openstack/grafanasix/templates/nginx-ingress.yaml
@@ -19,7 +19,7 @@ spec:
           backend:
             serviceName: grafana
             servicePort: {{.Values.nginx.endpoint.port.public}}
-{{- if .Values.grafana.global }}
+{{- if .Values.ingress.global }}
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
