--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -10,6 +10,12 @@ metadata:
 spec:
   jobLabel: endpoint-sd
 
+  # Selector not used but required in k8s 1.10+ .
+  selector:
+    matchExpressions:
+      - key: foo
+        operator: DoesNotExist
+
   # Find endpoints in any namespace.
   namespaceSelector:
     any: true
