--- a/system/prometheus-server/templates/podmonitors/pod-sd.yaml
+++ b/system/prometheus-server/templates/podmonitors/pod-sd.yaml
@@ -10,6 +10,12 @@ metadata:
 spec:
   jobLabel: pod-sd
 
+  # Selector not used but required in k8s 1.10+ .
+  selector:
+    matchExpressions:
+      - key: foo
+        operator: DoesNotExist
+
   # Find pods in any namespace.
   namespaceSelector:
     any: true
