fix secret name

--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -67,7 +67,7 @@ spec:
   {{ if .Values.alertmanagers -}}
   # Alertmanager configuration.
   additionalAlertManagerConfigs:
-    name: {{ include "prometheus.name" . }}-alertmanager-config
+    name: {{ include "prometheus.fullName" . }}-alertmanager-config
     key: config.yaml
   {{- end }}
 
