minor fixes to get through a helm upgrade in debug mode

--- a/openstack/nannies/templates/cinder-nanny-deployment.yaml
+++ b/openstack/nannies/templates/cinder-nanny-deployment.yaml
@@ -55,7 +55,7 @@ spec:
             - name: CINDER_CONSISTENCY_FIX_LIMIT
               value: {{ .Values.cinder_nanny.consistency.fix_limit | quote }}
             - name: CINDER_NANNY_INTERVAL
-              value: {{ .Values.cinder_nanny.nanny.interval | quote }}
+              value: {{ .Values.cinder_nanny.interval | quote }}
             - name: OS_AUTH_URL
               value: "https://{{ include "keystone_api_endpoint_host_public" . }}:443/v3"
             - name: OS_PROJECT_NAME
