--- a/openstack/nannies/templates/nova-nanny-deployment.yaml
+++ b/openstack/nannies/templates/nova-nanny-deployment.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
 {{- if or .Values.nova_nanny.db_purge.enabled .Values.nova_nanny.consistency.enabled }}
         - name: db-consistency-and-purge
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.nova_nanny.image_version}}
+          image: {{.Values.global.imageRegistry}}/monsoon/nova-nanny:{{.Values.nova_nanny.image_version}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -67,7 +67,7 @@ spec:
             - name: NOVA_QUEENS_INSTANCE_MAPPING_DRY_RUN
               value: {{ .Values.nova_nanny.consistency.queens_instance_mapping_dry_run | quote }}
             - name: NOVA_NANNY_INTERVAL
-              value: {{ .Values.nova_nanny.nanny.interval | quote }}
+              value: {{ .Values.nova_nanny.interval | quote }}
             - name: NOVA_CELL2_ENABLED
               value: "false"
             - name: OS_AUTH_URL
@@ -87,7 +87,7 @@ spec:
               name: nova-etc
 {{- if .Values.nova_nanny.cell2.enabled }}
         - name: db-consistency-and-purge-cell2
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.nova_nanny.image_version}}
+          image: {{.Values.global.imageRegistry}}/monsoon/nova-nanny:{{.Values.nova_nanny.image_version}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -122,7 +122,7 @@ spec:
             - name: NOVA_QUEENS_INSTANCE_MAPPING_DRY_RUN
               value: "true"
             - name: NOVA_NANNY_INTERVAL
-              value: {{ .Values.nova_nanny.nanny.interval | quote }}
+              value: {{ .Values.nova_nanny.interval | quote }}
             - name: NOVA_CELL2_ENABLED
               value: "true"
             - name: OS_AUTH_URL
@@ -144,7 +144,7 @@ spec:
 {{- end }}
 {{- if .Values.nova_nanny.quota_sync.enabled_disabled_for_now_as_not_used }}
         - name: quota-sync
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.nova_nanny.image_version}}
+          image: {{.Values.global.imageRegistry}}/monsoon/nova-nanny:{{.Values.nova_nanny.image_version}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -170,7 +170,7 @@ spec:
 {{- end }}
 {{- if .Values.nova_nanny.db_cleanup.enabled }}
         - name: db-cleanup
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.nova_nanny.image_version}}
+          image: {{.Values.global.imageRegistry}}/monsoon/nova-nanny:{{.Values.nova_nanny.image_version}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -207,7 +207,7 @@ spec:
 {{- end }}
 {{- if .Values.nova_nanny.sync_neutron_cache.enabled }}
         - name: sync-neutron-cache
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.nova_nanny.image_version}}
+          image: {{.Values.global.imageRegistry}}/monsoon/nova-nanny:{{.Values.nova_nanny.image_version}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
@@ -236,7 +236,7 @@ spec:
               name: nova-etc
 {{- if .Values.nova_nanny.cell2.enabled }}
         - name: sync-neutron-cache-cell2
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/nova-nanny:{{.Values.nova_nanny.image_version}}
+          image: {{.Values.global.imageRegistry}}/monsoon/nova-nanny:{{.Values.nova_nanny.image_version}}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
