--- a/openstack/nannies/values.yaml
+++ b/openstack/nannies/values.yaml
@@ -99,6 +99,9 @@ nova_nanny:
     interval: 360
     # sync the neutron cache for bare metal nodes as well?
     baremetal: false
+  cell2:
+    # this should be true if we have a second cell defined in this region
+    enabled: False
 
 # cinder nanny
 cinder_nanny:
