Federate etcdbr metrics to frontend

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -122,6 +122,7 @@ data:
           - '{__name__=~"^elasticsearch_.+"}'
           - '{__name__=~"^elektra_.+"}'
           - '{__name__=~"^etcd_.+"}'
+          - '{__name__=~"^etcdbr_.+"}'
           - '{__name__=~"^go_.+"}'
           - '{__name__=~"^hermes_.+"}'
           - '{__name__=~"^http_.+"}'
