--- a/system/elk/values.yaml
+++ b/system/elk/values.yaml
@@ -1,16 +1,18 @@
-es-master:
+es_master:
+  enabled: false
+  master_dummy_port: '63062'
+  client_replicas: '3'
+
+es_data:
   enabled: false
 
-es-data:
+es_client:
   enabled: false
 
-es-client:
+es_manager:
   enabled: false
 
-es-manager:
-  enabled: false
-
-wall-e
+wall_e:
   enabled: false
 
 kibana:
