--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -26,6 +26,10 @@ spec:
           ports:
             - name: http
               containerPort: 80
+          volumeMounts:
+            - name: filters
+              mountPath: '/home/app/api/config/defaultFilters'
+              readOnly: true    
           env:
             - name: REGION
               value: {{ .Values.region }}
