--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -17,6 +17,10 @@ spec:
       labels:
         name: supernova
     spec:
+      volumes:
+        - name: default-filters 
+          configMap: 
+            name: filters
       # The preStop hook below sleeps 30 seconds, extend the gracePeriod accordingly
       terminationGracePeriodSeconds: 60
       containers:
@@ -27,7 +31,7 @@ spec:
             - name: http
               containerPort: 80
           volumeMounts:
-            - name: filters
+            - name: default-filters
               mountPath: '/home/app/api/config/defaultFilters'
               readOnly: true    
           env:
