[neutron] create availability-zone aware neutron-network-agents

--- a/openstack/neutron/templates/configmap-etc.yaml
+++ b/openstack/neutron/templates/configmap-etc.yaml
@@ -59,3 +59,9 @@ data:
       match_type: glob
       glob_disable_ordering: false
       ttl: 0 # metrics do not expire
+  az-a.conf: |
+    [agent]
+    availability_zone = {{ .Values.global.region }}a
+  az-b.conf: |
+    [agent]
+    availability_zone = {{ .Values.global.region }}b
