--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -136,14 +136,14 @@ sapcc_ratelimit:
   # - initiator_host_address
   rateLimitBy: initiator_project_id
 
+  # The maximal time a request can be suspended.
+  maxSleepTimeSeconds: 20
+
+  # Log requests that are going to be suspended for logSleepTimeSeconds <= t <= maxSleepTimeSeconds.
+  logSleepTimeSeconds: 18
+
   # The backend used to store rate limits.
   backend:
-    # Backend type. Defaults to redis.
-    # Can be one of:
-    # - redis
-    # - memcached
-    type: redis
-
     # Backend port. Defaults to redis port.
     port: 6379
 
@@ -163,6 +163,11 @@ sapcc-ratelimit-redis:
   # Use a single redis.
   cluster:
     enabled: false
+
+  # Minimal possible PV.
+  master:
+    persistence:
+      size: 1Gi
 
   # No password required for redis.
   usePassword: false
