--- a/openstack/swift/etc/sapcc-ratelimit.yaml
+++ b/openstack/swift/etc/sapcc-ratelimit.yaml
@@ -1,24 +1,43 @@
 # Override default ratelimit response.
 ratelimit_response:
   status: 498 Rate Limited
+  status_code: 498
   body: "Rate Limit Exceeded"
 
 # Override default blacklist response.
 blacklist_response:
   status: 497 Blacklisted
+  status_code: 497
   body: "You have been blacklisted. Please contact and administrator."
+
+# Group multiple CADF actions to one rate limit action.
+groups:
+  write:
+    - update
+    - delete
+
+  read:
+    - read
+    - read/list
 
 rates:
   # Global rate limits are counted across all projects and
   # are meant to protect the backend from being overloaded.
   global:
     account/container:
-      - action: create
-        limit: 1000r/m
+      - action: write
+        limit: 10000r/s
 
-  # Default rate limits on project level.
-  # Apply to each project unless overridden via Limes.
+  # Default rate limits apply to each project.
+  # Rate limits specific to a project can only be set via Limes.
   default:
+    account:
+      - action: write
+        limit: 10r/s
+
     account/container:
-      - action: create
-        limit: 100r/m
+      - action: read
+        limit: 100r/s
+
+      - action: write
+        limit: 50r/s
