option to disable control plane specific alerts

--- a/system/kube-monitoring/charts/kube-rules/values.yaml
+++ b/system/kube-monitoring/charts/kube-rules/values.yaml
@@ -5,3 +5,10 @@ prometheusName:
 # Only required if the collector -> frontend pattern is used.
 # If not given collector aggregation rules are not deployed.
 # prometheusCollectorName:
+
+# Tier for Prometheus alert and aggregation rules.
+tier: k8s
+
+# Disable alerts by file name.
+disableAlerts: []
+#   - controlplane
