--- a/system/kube-monitoring/charts/kube-rules/templates/collector-aggregations.yaml
+++ b/system/kube-monitoring/charts/kube-rules/templates/collector-aggregations.yaml
@@ -8,7 +8,7 @@ kind: PrometheusRule
 metadata:
   name: kubernetes-{{ printf "%s" $path | replace "/" "-"  }}
   labels:
-    tier: k8s
+    tier: {{ required ".Values.tier missing" $values.tier }}
     prometheus: {{ $values.prometheusCollectorName }}
 
 spec:
