--- a/system/kube-monitoring/charts/kube-rules/templates/frontend-aggregations.yaml
+++ b/system/kube-monitoring/charts/kube-rules/templates/frontend-aggregations.yaml
@@ -7,7 +7,7 @@ kind: PrometheusRule
 metadata:
   name: kubernetes-{{ printf "%s" $path | replace "/" "-" }}
   labels:
-    tier: k8s
+    tier: {{ required ".Values.tier missing" $values.tier }}
     prometheus: {{ required ".Values.prometheusName missing" $values.prometheusName }}
 
 spec:
