--- a/openstack/swift-utils/templates/account-caretaker-collect-daemonset.yaml
+++ b/openstack/swift-utils/templates/account-caretaker-collect-daemonset.yaml
@@ -18,7 +18,7 @@ spec:
         component: swift-account-caretaker-collect
         from: daemonset
       annotations:
-        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"species","value":{{ quote .Values.species }}}]'
+        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"species","value":{{ quote .Values.species }}}, {"key":"multipath-disks","value":"true"}]'
         checksum/caretaker.etc: {{ include "swift-utils/templates/caretaker-configmap.yaml" . | sha256sum }}
     spec:
       {{- if ge .Capabilities.KubeVersion.Minor "7" }}
