--- a/openstack/swift-drive-autopilot/templates/daemonset.yaml
+++ b/openstack/swift-drive-autopilot/templates/daemonset.yaml
@@ -17,7 +17,7 @@ spec:
         from: daemonset
         release: "{{.Release.Name}}"
       annotations:
-        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"species","value":{{quote .Values.species}}}]'
+        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"species","value":{{quote .Values.species}}}, {"key":"multipath-disks","value":"true"}]'
         prometheus.io/scrape: "true"
         prometheus.io/port: "9102"
     spec:
