--- a/openstack/swift-drive-autopilot/templates/daemonset.yaml
+++ b/openstack/swift-drive-autopilot/templates/daemonset.yaml
@@ -17,17 +17,18 @@ spec:
         from: daemonset
         release: "{{.Release.Name}}"
       annotations:
-        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"species","value":{{quote .Values.species}}}, {"key":"multipath-disks","value":"true"}]'
         prometheus.io/scrape: "true"
         prometheus.io/port: "9102"
     spec:
-      {{- if ge .Capabilities.KubeVersion.Minor "7" }}
       tolerations:
       - key: "species"
         operator: "Equal"
-        value: {{quote .Values.species}}
+        value: "{{.Values.species}}"
         effect: "NoSchedule"
-      {{- end }}
+      - key: "species"
+        operator: "Equal"
+        value: "{{.Values.species}}-multipath"
+        effect: "NoSchedule"
       nodeSelector:
         species: {{quote .Values.species}}
       volumes:
