adding prometheus es-exporter to scaleout cluster

--- a/system/elk/requirements.yaml
+++ b/system/elk/requirements.yaml
@@ -43,3 +43,9 @@ dependencies:
     repository: file://vendor/wall-e
     version: 2.0.0
     condition: wall-e.enabled
+
+  - name: es-exporter
+    alias: es_exporter
+    repository: file://vendor/es-exporter
+    version: 2.0.0
+    condition: es-exporter.enabled
