--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-neutron-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-neutron-configmap-vct.yaml
@@ -1,4 +1,4 @@
-{{- if or (.Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1") (.Values.isImageTransportTemplating | default false) }}
+{{- if and .Values.neutron_dvs_agent_enabled (or (.Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1") (.Values.isImageTransportTemplating | default false)) }}
 apiVersion: vcenter-operator.stable.sap.cc/v1
 kind: VCenterTemplate
 metadata:
