--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -147,6 +147,7 @@ vspc:
 
 # I would move all that to the neutron deployment
 neutron: {}
+neutron_dvs_agent_enabled: True
 
 cross_az_attach: 'False'
 
