--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -107,6 +107,7 @@ data:
           - '{__name__=~"^blackbox_.+"}'
           - '{__name__=~"^broker_.+"}'
           - '{__name__=~"^canary_.+"}'
+          - '{__name__=~"^castellum_.+"}'
           - '{__name__=~"^concourse_.+"}'
           - '{__name__=~"^cinder_nanny_.+"}'
           - '{__name__=~"^container_cpu_cfs_.+"}'
