--- a/openstack/castellum/templates/api-service.yaml
+++ b/openstack/castellum/templates/api-service.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 metadata:
   name: castellum-api
   annotations:
+    maia.io/scrape: "true"
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
     prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
