Added missing flag to apic-exporters

--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
@@ -33,6 +33,8 @@ spec:
           args:
             - -c
             - /apic-exporters-etc/config-apic-exporters.yaml
+            - -t
+            - apichealth
           {{- if .Values.apic_exporters.resources.enabled }}
           resources:
             requests:
