--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_configmap.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_configmap.yaml
@@ -1,5 +1,4 @@
 {{- if .Values.apic_exporters.enabled }}
-{{ $v := .Values.aci.apic_hosts | split ":" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -15,7 +14,7 @@ data:
     prometheus_port: {{ .Values.apic_exporters.prometheus_port }}
     log_level: {{ .Values.apic_exporters.device_information.log_level }}
     device_information:
-      hostname: {{ $v._0 | quote}}
+      hosts: {{ .Values.aci.apic_hosts }}
       username: {{ .Values.aci.apic_user }}
       password: {{ .Values.aci.apic_password }}
       tenant_name: {{ .Values.aci.apic_tenant_name }}
