[neutron] add l7policies to audit map

--- a/openstack/neutron/templates/etc/_neutron_audit_map.yaml
+++ b/openstack/neutron/templates/etc/_neutron_audit_map.yaml
@@ -62,6 +62,10 @@ resources:
         type_uri: network/loadbalancer/pools
         children:
           members:
+      l7policies:
+        type_uri: network/loadbalancer/l7policies
+        children:
+          rules:
   log:
     # logging extension namespace
     singleton: true
